--- a/fonte6/src/app/home/home.page.html
+++ b/fonte6/src/app/home/home.page.html
@@ -1,14 +1,24 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      FONTE DA VIDA
     </ion-title>
+    <ion-icon class="home-more" name="more" slot="end" (click)="abrirDefinicoes()"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+    <div>
+      <img src="assets/img/home.jpg" />
+    </div>
+    <ion-grid>
+      <ion-row>
+        <ion-col padding class="homelinks-col" size="6" *ngFor="let link of homeLinks" (click)="irPara(link.pagina)">
+          <ion-icon name="{{ link.icone }}"></ion-icon>
+          <h2>{{ link.nome }}</h2>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
 </ion-content>
