--- a/fonte6/src/app/home/home.page.scss
+++ b/fonte6/src/app/home/home.page.scss
@@ -1,1 +1,12 @@
-
+ion-grid ion-row ion-col{
+    border: 1px solid #e3e3e3;
+}
+.homelinks-col{
+    text-align: center;
+}
+.homelinks-col ion-icon{
+    font-size: 250%
+}
+.home-more{
+    font-size: 180%;
+}
